{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 166,
  "lineage": "9bfeb38a-a143-8667-fb14-1124129c3e08",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.66.76.132",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-02-02T20:35:26.643-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/protean-pipe-447211-g7/regions/us-central1/addresses/k3s-static-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "k3s-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "protean-pipe-447211-g7",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/regions/us-central1/addresses/k3s-static-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-02T20:35:26.055-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/protean-pipe-447211-g7/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/networks/default",
            "priority": 1000,
            "project": "protean-pipe-447211-g7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k3s_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443",
                  "2379",
                  "2380",
                  "10250",
                  "10251",
                  "10252",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-02T20:35:26.083-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/protean-pipe-447211-g7/global/firewalls/allow-k3s-ports",
            "log_config": [],
            "name": "allow-k3s-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/networks/default",
            "priority": 1000,
            "project": "protean-pipe-447211-g7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/firewalls/allow-k3s-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-02T20:35:26.048-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/protean-pipe-447211-g7/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/networks/default",
            "priority": 1000,
            "project": "protean-pipe-447211-g7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nfs_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "111",
                  "2049"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "111",
                  "2049"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-02-02T20:35:26.077-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/protean-pipe-447211-g7/global/firewalls/nfs-firewall",
            "log_config": [],
            "name": "nfs-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/networks/default",
            "priority": 1000,
            "project": "protean-pipe-447211-g7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/firewalls/nfs-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k3s-masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "k3s-master",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/zones/us-central1-a/disks/k3s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-02-02T20:35:34.642-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/protean-pipe-447211-g7/zones/us-central1-a/instances/k3s-master",
            "instance_id": "3523293136372496761",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "user:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDC/XRAKrq6wObWM072Z4Itto5IX0tIU4xjoRAls9yTVl6RX+R+Gs41pjrRQQUe2KK0BdtCCoFJPEkMp4EHfEgo2eFD/AcoGfMYGK2DoNluM2GKYKEx6AbbH2mGX4KVUuE8OL8dliYokxT6P6gyEZumLfSwCzAErut3sJ1Ipl8zRlGamZtFMfWi8mUuL/YuAIPng6tl7whV8d9h4AtKBNzNFJc82xYSPVdfY7484PDClMS4VRHLgsvR1kA9yj/lAbTjBVGCCYZ6fX0qXsdm2wXKOIeb78gFHgy3lozx0MT/WFCNn3MmG5sOQl35iMH2pLPVPkWqweElfY3WHlfXAtD9Y2mr6Rv/0KiDU4EqnnUz8r0J/rYyh97I84xbhvvmXK6vad7Uhp552XCsI/IYQC6Psjal/PT04dtMs+glfINz3HMg [...]
            },
            "metadata_fingerprint": "okBcFsbqHQk=",
            "name": "k3s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.66.76.132",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/networks/default",
                "network_ip": "10.128.0.38",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/regions/us-central1/subnetworks/default",
                "subnetwork_project": "protean-pipe-447211-g7"
              }
            ],
            "project": "protean-pipe-447211-g7",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/zones/us-central1-a/instances/k3s-master",
            "service_account": [
              {
                "email": "843462201394-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.static_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k3s-workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "k3s-node-1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/zones/us-central1-a/disks/k3s-node-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-02-02T20:35:29.998-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/protean-pipe-447211-g7/zones/us-central1-a/instances/k3s-node-1",
            "instance_id": "2455444205071104382",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "user:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDC/XRAKrq6wObWM072Z4Itto5IX0tIU4xjoRAls9yTVl6RX+R+Gs41pjrRQQUe2KK0BdtCCoFJPEkMp4EHfEgo2eFD/AcoGfMYGK2DoNluM2GKYKEx6AbbH2mGX4KVUuE8OL8dliYokxT6P6gyEZumLfSwCzAErut3sJ1Ipl8zRlGamZtFMfWi8mUuL/YuAIPng6tl7whV8d9h4AtKBNzNFJc82xYSPVdfY7484PDClMS4VRHLgsvR1kA9yj/lAbTjBVGCCYZ6fX0qXsdm2wXKOIeb78gFHgy3lozx0MT/WFCNn3MmG5sOQl35iMH2pLPVPkWqweElfY3WHlfXAtD9Y2mr6Rv/0KiDU4EqnnUz8r0J/rYyh97I84xbhvvmXK6vad7Uhp552XCsI/IYQC6Psjal/PT04dtMs+glfINz3HMg [...]
            },
            "metadata_fingerprint": "okBcFsbqHQk=",
            "name": "k3s-node-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.44.155.94",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/networks/default",
                "network_ip": "10.128.0.36",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/regions/us-central1/subnetworks/default",
                "subnetwork_project": "protean-pipe-447211-g7"
              }
            ],
            "project": "protean-pipe-447211-g7",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/zones/us-central1-a/instances/k3s-node-1",
            "service_account": [
              {
                "email": "843462201394-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": "k3s-node-2",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/zones/us-central1-a/disks/k3s-node-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-02-02T20:35:29.106-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/protean-pipe-447211-g7/zones/us-central1-a/instances/k3s-node-2",
            "instance_id": "8176692929445624191",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "user:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDC/XRAKrq6wObWM072Z4Itto5IX0tIU4xjoRAls9yTVl6RX+R+Gs41pjrRQQUe2KK0BdtCCoFJPEkMp4EHfEgo2eFD/AcoGfMYGK2DoNluM2GKYKEx6AbbH2mGX4KVUuE8OL8dliYokxT6P6gyEZumLfSwCzAErut3sJ1Ipl8zRlGamZtFMfWi8mUuL/YuAIPng6tl7whV8d9h4AtKBNzNFJc82xYSPVdfY7484PDClMS4VRHLgsvR1kA9yj/lAbTjBVGCCYZ6fX0qXsdm2wXKOIeb78gFHgy3lozx0MT/WFCNn3MmG5sOQl35iMH2pLPVPkWqweElfY3WHlfXAtD9Y2mr6Rv/0KiDU4EqnnUz8r0J/rYyh97I84xbhvvmXK6vad7Uhp552XCsI/IYQC6Psjal/PT04dtMs+glfINz3HMg [...]
            },
            "metadata_fingerprint": "okBcFsbqHQk=",
            "name": "k3s-node-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.45.172.182",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/networks/default",
                "network_ip": "10.128.0.35",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/regions/us-central1/subnetworks/default",
                "subnetwork_project": "protean-pipe-447211-g7"
              }
            ],
            "project": "protean-pipe-447211-g7",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/zones/us-central1-a/instances/k3s-node-2",
            "service_account": [
              {
                "email": "843462201394-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nfs_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250128",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/zones/us-central1-a/disks/nfs-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "creation_timestamp": "2025-02-02T21:00:23.627-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/protean-pipe-447211-g7/zones/us-central1-a/instances/nfs-server",
            "instance_id": "5142097955553932169",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "user:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDC/XRAKrq6wObWM072Z4Itto5IX0tIU4xjoRAls9yTVl6RX+R+Gs41pjrRQQUe2KK0BdtCCoFJPEkMp4EHfEgo2eFD/AcoGfMYGK2DoNluM2GKYKEx6AbbH2mGX4KVUuE8OL8dliYokxT6P6gyEZumLfSwCzAErut3sJ1Ipl8zRlGamZtFMfWi8mUuL/YuAIPng6tl7whV8d9h4AtKBNzNFJc82xYSPVdfY7484PDClMS4VRHLgsvR1kA9yj/lAbTjBVGCCYZ6fX0qXsdm2wXKOIeb78gFHgy3lozx0MT/WFCNn3MmG5sOQl35iMH2pLPVPkWqweElfY3WHlfXAtD9Y2mr6Rv/0KiDU4EqnnUz8r0J/rYyh97I84xbhvvmXK6vad7Uhp552XCsI/IYQC6Psjal/PT04dtMs+glfINz3HMg [...]
            },
            "metadata_fingerprint": "okBcFsbqHQk=",
            "name": "nfs-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.60.118.115",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/global/networks/default",
                "network_ip": "10.128.0.39",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/regions/us-central1/subnetworks/default",
                "subnetwork_project": "protean-pipe-447211-g7"
              }
            ],
            "project": "protean-pipe-447211-g7",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/protean-pipe-447211-g7/zones/us-central1-a/instances/nfs-server",
            "service_account": [
              {
                "email": "843462201394-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    }
  ]
}